modificaciones de la barra de navegacion

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,7 @@
 {% extends "navbar.html" %}
-{% block title %}Titulo{% endblock %}
+
+{% block title %}Inicio - Mi Sitio{% endblock %}
+
 {% block content %}
-
-<script src="/static/js/inicio.js"></script>
-<link rel="stylesheet" href="/static/css/index.css">
-<h1>css</h1>
-
+<h1>Hola</h1>
 {% endblock %}
-
